# git-crypt

./: .gitattributes  .gitignore  AUTHORS  CONTRIBUTING.md  Dockerfile  INSTALL  INSTALL.md  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  RELEASE_NOTES-0.4.1.md  RELEASE_NOTES-0.4.md  THANKS.md  Util_win32.cpp  autogen.sh  commands.cpp  commands.hpp  configure.ac  coprocess-unix.cpp  coprocess-unix.hpp  coprocess-win32.cpp  coprocess-win32.hpp  coprocess.cpp  coprocess.hpp  crypto-openssl-10.cpp  crypto-openssl-11.cpp  crypto-openssl.cpp  crypto.cpp  crypto.hpp  fhstream.cpp  fhstream.hpp  git-crypt-0.4.2.tar.gz.id  git-crypt-0.5.0.tar.gz.id  git-crypt-0.6.0.tar.gz.delta  git-crypt-0.7.0.tar.gz.delta  git-crypt.cpp  git-crypt.hpp  (+18 more)
.git-crypt/keys/default/0/: DED5610FCA6AEC5A761B42817F9E3D691989C999.gpg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  codacy.yml  codeql.yml  linux.yaml  main.yml  release-linux-arm64.yml  release-linux.yml  release-macos.yml  release-windows.yml  windows.yaml
debian/: changelog  control  copyright  gbp.conf  git-crypt.docs  git-crypt.install  rules  watch
debian/source/: patch-header
debian/upstream/: signing-key.asc
doc/: multiple_keys.md
man/: git-crypt.xml
man/man1/: .gitignore
media/: git-crypt-logo-dark.ai  git-crypt-logo.ai
rhel/: README.md  git-crypt.spec
scripts/: README.md  git-crypt-ls.py  git-crypt-unlock.py
tests/: fake.test.secrets  key.gitcrypt
tests/linux/: basic-test.sh
tests/windows/: basic-test.ps1
